# Parallel-Computing-Projects

./: README.md
Project1/Report/: alpege_basturk_p1.odt  data.ods  grid_structure_drawing.odg
Project1/cs426_project1_code/: CMakeLists.txt  input_100  mat1_256x256  mat1_30x30  mat1_4x4  mat1_9x9  mat2_256x256  mat2_30x30  mat2_9x9  mat3_256x256  mat3_30x30  mat3_4x4  mat3_9x9  matmult-mpi-1d.c  matmult-serial.c  sum-mpi-ppv1.c  sum-mpi-ppv2.c  sum-serial.c  test-input-matrix1.txt  test-input-matrix2.txt
Project2/Report/: alpege_basturk_p2.odt  data.ods
Project2/cs426_project2_code/: CMakeLists.txt  documents.txt  documents2.txt  main.c  utils.c  utils.h
Project3/Report/: alpege_basturk_p3.odt  data.ods
Project3/cs426_project3_code/: CMakeLists.txt  IO_test.c  compile.sh  lbp_omp.c  lbp_seq.c  main.c  run.sh  scripts.sh  util.c  util.h  writeImage.py
Project4/: pr4_clarifications
Project4/Report/: alpege_basturk_p4.odt  data.ods
Project4/cs426_project4_code/: CMakeLists.txt  kernels.cu  main.c  makefile  mmmult.cu  testTimeScript.sh  utils.c  utils.cu  utils.cuh  utils.h
